# sample-lms-app

./: deploy-aci.yaml  docker-compose.yml
client/: Dockerfile  angular.json
client/nginx/: default.conf
client/src/: styles.css
client/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
client/src/app/components/book-detail/: book-detail.component.css  book-detail.component.html  book-detail.component.ts
client/src/app/components/book-list/: book-list.component.css  book-list.component.html  book-list.component.ts
client/src/app/entities/: book.ts
client/src/app/services/: book.service.ts  loading.service.ts
client/src/assets/: screen-loader.css
client/src/environments/: environment.prod.ts
server/: Dockerfile  pyproject.toml
server/DB/: book.csv  create_db.bat  create_db.sh  import_sample.sql  schema_sample.sql
server/src/: book.py  book_model.py  controller.py  database.py  logic.py  main.py  settings.py
