[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["keiya-nagano <nakegainoya5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.2"
uvicorn = "^0.12.2"
flake8 = "^3.8.4"
sqlalchemy = "^1.3.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
